--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
+    "prettier": "^2.6.2",
     "typescript": "4.1.3"
   },
   "scripts": {
